@@ -165,52 +165,52 @@ class AutogenerateDiffTest(TestCase):
         autogenerate.produce_migration_diffs(template_args, self.autogen_context)
         eq_(re.sub(r"u'", "'", template_args['upgrades']),
 """### commands auto generated by Alembic - please adjust! ###
-    create_table('item',
+    op.create_table('item',
     sa.Column('id', sa.Integer(), nullable=False),
     sa.Column('description', sa.String(length=100), nullable=True),
     sa.Column('order_id', sa.Integer(), nullable=True),
     sa.ForeignKeyConstraint([order_id], ['order.order_id'], ),
     sa.PrimaryKeyConstraint('id')
     )
-    drop_table('extra')
-    add_column('address', sa.Column('street', sa.String(length=50), nullable=True))
-    add_column('order', sa.Column('user_id', sa.Integer(), nullable=True))
-    alter_column('order', 'amount', 
+    op.drop_table('extra')
+    op.add_column('address', sa.Column('street', sa.String(length=50), nullable=True))
+    op.add_column('order', sa.Column('user_id', sa.Integer(), nullable=True))
+    op.alter_column('order', 'amount', 
                existing_type=sa.NUMERIC(precision=8, scale=2), 
                type_=sa.Numeric(precision=10, scale=2), 
                nullable=True, 
                existing_server_default='0')
-    drop_column('user', 'pw')
-    alter_column('user', 'a1', 
+    op.drop_column('user', 'pw')
+    op.alter_column('user', 'a1', 
                existing_type=sa.TEXT(), 
                server_default='x', 
                existing_nullable=True)
-    alter_column('user', 'name', 
+    op.alter_column('user', 'name', 
                existing_type=sa.VARCHAR(length=50), 
                nullable=False)
     ### end Alembic commands ###""")
         eq_(re.sub(r"u'", "'", template_args['downgrades']),
 """### commands auto generated by Alembic - please adjust! ###
-    drop_table('item')
-    create_table('extra',
+    op.drop_table('item')
+    op.create_table('extra',
     sa.Column('x', sa.CHAR(), nullable=True),
     sa.Column('uid', sa.INTEGER(), nullable=True),
     sa.ForeignKeyConstraint([uid], ['user.id'], ),
     sa.PrimaryKeyConstraint()
     )
-    drop_column('address', 'street')
-    drop_column('order', 'user_id')
-    alter_column('order', 'amount', 
+    op.drop_column('address', 'street')
+    op.drop_column('order', 'user_id')
+    op.alter_column('order', 'amount', 
                existing_type=sa.Numeric(precision=10, scale=2), 
                type_=sa.NUMERIC(precision=8, scale=2), 
                nullable=False, 
                existing_server_default='0')
-    add_column('user', sa.Column('pw', sa.VARCHAR(length=50), nullable=True))
-    alter_column('user', 'a1', 
+    op.add_column('user', sa.Column('pw', sa.VARCHAR(length=50), nullable=True))
+    op.alter_column('user', 'a1', 
                existing_type=sa.TEXT(), 
                server_default=None, 
                existing_nullable=True)
-    alter_column('user', 'name', 
+    op.alter_column('user', 'name', 
                existing_type=sa.VARCHAR(length=50), 
                nullable=True)
     ### end Alembic commands ###""")
@@ -274,6 +274,7 @@ class AutogenRenderTest(TestCase):
     @requires_07
     def setup_class(cls):
         context._context_opts['sqlalchemy_module_prefix'] = 'sa.'
+        context._context_opts['alembic_module_prefix'] = 'op.'
 
     def test_render_table_upgrade(self):
         m = MetaData()
@@ -285,7 +286,7 @@ class AutogenRenderTest(TestCase):
         )
         eq_ignore_whitespace(
             autogenerate._add_table(t, {}),
-            "create_table('test',"
+            "op.create_table('test',"
             "sa.Column('id', sa.Integer(), nullable=False),"
             "sa.Column('address_id', sa.Integer(), nullable=True),"
             "sa.Column('timestamp', sa.DATETIME(), "
@@ -300,14 +301,14 @@ class AutogenRenderTest(TestCase):
     def test_render_drop_table(self):
         eq_(
             autogenerate._drop_table(Table("sometable", MetaData()), {}),
-            "drop_table('sometable')"
+            "op.drop_table('sometable')"
         )
 
     def test_render_add_column(self):
         eq_(
             autogenerate._add_column(
                     "foo", Column("x", Integer, server_default="5"), {}),
-            "add_column('foo', sa.Column('x', sa.Integer(), "
+            "op.add_column('foo', sa.Column('x', sa.Integer(), "
                 "server_default='5', nullable=True))"
         )
 
@@ -316,7 +317,7 @@ class AutogenRenderTest(TestCase):
             autogenerate._drop_column(
                     "foo", Column("x", Integer, server_default="5"), {}),
 
-            "drop_column('foo', 'x')"
+            "op.drop_column('foo', 'x')"
         )
 
     def test_render_modify_type(self):
@@ -325,7 +326,7 @@ class AutogenRenderTest(TestCase):
                         "sometable", "somecolumn", 
                         {},
                         type_=CHAR(10), existing_type=CHAR(20)),
-            "alter_column('sometable', 'somecolumn', "
+            "op.alter_column('sometable', 'somecolumn', "
                 "existing_type=sa.CHAR(length=20), type_=sa.CHAR(length=10))"
         )
 
@@ -336,7 +337,7 @@ class AutogenRenderTest(TestCase):
                         {},
                         existing_type=Integer(),
                         nullable=True),
-            "alter_column('sometable', 'somecolumn', "
+            "op.alter_column('sometable', 'somecolumn', "
             "existing_type=sa.Integer(), nullable=True)"
         )
 
@@ -348,7 +349,7 @@ class AutogenRenderTest(TestCase):
                         existing_type=Integer(),
                         existing_server_default="5",
                         nullable=True),
-            "alter_column('sometable', 'somecolumn', "
+            "op.alter_column('sometable', 'somecolumn', "
             "existing_type=sa.Integer(), nullable=True, "
             "existing_server_default='5')"
         )
